Linked FXML to view class and introduced POC expense list

--- a/src/main/resources/com/ogr/splithappens/view.fxml
+++ b/src/main/resources/com/ogr/splithappens/view.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -37,7 +39,18 @@
                   <TextField layoutX="14.0" layoutY="13.0" prefHeight="26.0" prefWidth="134.0" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <ButtonBar layoutX="68.0" prefHeight="40.0" prefWidth="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <buttons>
+                      <Button fx:id="newExpense" mnemonicParsing="false" text="New Expense" />
+                    </buttons>
+                     <padding>
+                        <Insets right="30.0" />
+                     </padding>
+                  </ButtonBar>
+                  <VBox fx:id="expensesTable" layoutX="40.0" layoutY="45.0" prefHeight="358.0" prefWidth="366.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+               </children></AnchorPane>
         </items>
       </SplitPane>
    </children>
