--- a/src/main/resources/com/ogr/splithappens/view.fxml
+++ b/src/main/resources/com/ogr/splithappens/view.fxml
@@ -16,7 +16,8 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="279.0">
                <children>
-                  <Button layoutX="161.0" layoutY="13.0" mnemonicParsing="false" text="Add" />
+                 <Button layoutX="161.0" layoutY="13.0" mnemonicParsing="false" text="Add person" fx:id="add"  onAction="#onAddPerson" />
+                 <TextField layoutX="14.0" layoutY="13.0" prefHeight="26.0" prefWidth="134.0" fx:id="inputName"/>
                   <Accordion fx:id="accordion" layoutY="51.0" prefHeight="344.0" prefWidth="214.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
 <!--              <panes>-->
 <!--                <TitledPane animated="false" text="untitled 1" >-->
@@ -40,7 +41,7 @@
 <!--                </TitledPane>-->
 <!--              </panes>-->
             </Accordion>
-                  <TextField layoutX="14.0" layoutY="13.0" prefHeight="26.0" prefWidth="134.0" />
+                
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
