--- a/src/main/resources/com/ogr/splithappens/views/addExpense.fxml
+++ b/src/main/resources/com/ogr/splithappens/views/addExpense.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,15 +12,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="450.0" prefWidth="410.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="70.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add a new expense" wrappingWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="Lato Regular" size="24.0" />
          </font>
       </Text>
-      <GridPane layoutX="20.0" layoutY="66.0" prefHeight="171.0" prefWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="70.0">
+      <GridPane layoutX="20.0" layoutY="66.0" prefHeight="166.0" prefWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="70.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="168.5999755859375" minWidth="10.0" prefWidth="130.20001220703125" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.79998779296875" minWidth="10.0" prefWidth="219.79998779296875" />
@@ -28,6 +28,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -49,17 +50,19 @@
             </Text>
             <TextField fx:id="valueField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="payerField" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button fx:id="addButton" mnemonicParsing="false" text="Add" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </Button>
-            <Text fx:id="errorText" fill="#ff5300" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.rowIndex="3">
+            <CheckBox fx:id="detailedCheck" mnemonicParsing="false" text="Detailed split" GridPane.rowIndex="4">
                <font>
-                  <Font name="Comic Sans MS Bold" size="14.0" />
+                  <Font size="14.0" />
                </font>
-            </Text>
+            </CheckBox>
          </children>
       </GridPane>
+      <Button fx:id="addButton" layoutX="341.0" layoutY="394.0" mnemonicParsing="false" text="Add" />
+      <Text fx:id="errorText" fill="#ff5300" layoutX="29.0" layoutY="412.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font name="Comic Sans MS Bold" size="14.0" />
+         </font>
+      </Text>
+      <ScrollPane fx:id="splitPane" disable="true" layoutX="105.0" layoutY="244.0" prefHeight="134.0" prefWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" />
    </children>
 </AnchorPane>
