--- a/src/main/resources/com/ogr/splithappens/views/addExpense.fxml
+++ b/src/main/resources/com/ogr/splithappens/views/addExpense.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -48,13 +49,18 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <TextField fx:id="valueField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="valueField" prefHeight="26.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="payerField" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <CheckBox fx:id="detailedCheck" mnemonicParsing="false" text="Detailed split" GridPane.rowIndex="4">
                <font>
                   <Font size="14.0" />
                </font>
             </CheckBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="zł" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
          </children>
       </GridPane>
       <Button fx:id="addButton" layoutX="341.0" layoutY="394.0" mnemonicParsing="false" text="Add" />
