--- a/src/main/resources/com/ogr/splithappens/view.fxml
+++ b/src/main/resources/com/ogr/splithappens/view.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -16,8 +15,8 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="279.0">
                <children>
-                 <Button layoutX="161.0" layoutY="13.0" mnemonicParsing="false" text="Add person" fx:id="add"  onAction="#onAddPerson" />
-                 <TextField layoutX="14.0" layoutY="13.0" prefHeight="26.0" prefWidth="134.0" fx:id="inputName"/>
+                 <Button fx:id="add" layoutX="161.0" layoutY="13.0" mnemonicParsing="false" onAction="#onAddPerson" text="Add person" />
+                 <TextField fx:id="inputName" layoutX="14.0" layoutY="13.0" prefHeight="26.0" prefWidth="134.0" />
                   <Accordion fx:id="accordion" layoutY="51.0" prefHeight="344.0" prefWidth="214.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
 
                   </Accordion>
@@ -29,6 +28,7 @@
                   <ButtonBar layoutX="68.0" prefHeight="40.0" prefWidth="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <buttons>
                       <Button fx:id="newExpense" mnemonicParsing="false" text="New Expense" />
+                        <Button fx:id="save" mnemonicParsing="false" text="Save" />
                     </buttons>
                      <padding>
                         <Insets right="30.0" />
