--- a/src/main/resources/com/ogr/splithappens/InvalidNamePopup.fxml
+++ b/src/main/resources/com/ogr/splithappens/InvalidNamePopup.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<!--/fx:controller="com.ogr.splithappens.views.InvalidNamePopupView"-->
+<!--/fx:controller="com.ogr.splithappens.view.InvalidNamePopupView"-->
 <AnchorPane prefHeight="200" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
   <children>
     <Label text="Invalid name, try again" layoutX="80" layoutY="20" prefWidth="150" prefHeight="40" fx:id="textLabel"/>
