--- a/src/main/resources/com/ogr/splithappens/SettleUp.fxml
+++ b/src/main/resources/com/ogr/splithappens/SettleUp.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<!--/fx:controller="com.ogr.splithappens.views.InvalidNamePopupView"-->
+<!--/fx:controller="com.ogr.splithappens.view.InvalidNamePopupView"-->
 <?import com.sun.javafx.scene.control.IntegerField?>
 <?import javafx.scene.layout.HBox?>
 <AnchorPane prefHeight="200" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"  >
