--- a/src/main/resources/com/ogr/splithappens/views/addExpense.fxml
+++ b/src/main/resources/com/ogr/splithappens/views/addExpense.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="450.0" prefWidth="410.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="450.0" prefWidth="410.0" styleClass="background-color-1" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="70.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add a new expense" wrappingWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
-         <font>
-            <Font name="Lato Regular" size="24.0" />
-         </font>
-      </Text>
-      <GridPane layoutX="20.0" layoutY="66.0" prefHeight="166.0" prefWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="70.0">
+      <Pane layoutX="20.0" layoutY="63.0" prefHeight="115.0" prefWidth="365.0" styleClass="background-color-2" stylesheets="@../Style/panes.css" />
+      <GridPane layoutX="32.0" layoutY="72.0" prefHeight="156.0" prefWidth="344.0" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="71.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="168.5999755859375" minWidth="10.0" prefWidth="130.20001220703125" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.79998779296875" minWidth="10.0" prefWidth="219.79998779296875" />
@@ -33,42 +33,62 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text fx:id="titleText" strokeType="OUTSIDE" strokeWidth="0.0" text="Expense title:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <TextField fx:id="titleField" GridPane.columnIndex="1" />
-            <Text fx:id="valueText" strokeType="OUTSIDE" strokeWidth="0.0" text="Value:" GridPane.rowIndex="1">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Text fx:id="payerText" strokeType="OUTSIDE" strokeWidth="0.0" text="Payer:" GridPane.rowIndex="2">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
+            <TextField fx:id="titleField" prefHeight="25.0" prefWidth="179.0" GridPane.columnIndex="1" />
             <TextField fx:id="valueField" prefHeight="26.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="payerField" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <CheckBox fx:id="detailedCheck" mnemonicParsing="false" text="Detailed split" GridPane.rowIndex="4">
+            <CheckBox fx:id="detailedCheck" mnemonicParsing="false" stylesheets="@../Style/button.css" text="Detailed split" GridPane.rowIndex="4">
                <font>
                   <Font size="14.0" />
                </font>
+               <styleClass>
+                  <String fx:value="label" />
+                  <String fx:value="checkbox" />
+               </styleClass>
             </CheckBox>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="zł" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Text>
+            <Label text="Expense title:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label text="Value:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label text="Payer:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
-      <Button fx:id="addButton" layoutX="341.0" layoutY="394.0" mnemonicParsing="false" text="Add" />
+      <Button fx:id="addButton" layoutX="341.0" layoutY="394.0" mnemonicParsing="false" text="ADD" />
       <Text fx:id="errorText" fill="#ff5300" layoutX="29.0" layoutY="412.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="Comic Sans MS Bold" size="14.0" />
          </font>
       </Text>
-      <ScrollPane fx:id="splitPane" disable="true" layoutX="105.0" layoutY="244.0" prefHeight="134.0" prefWidth="350.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+      <ScrollPane fx:id="splitPane" layoutX="105.0" layoutY="244.0" prefHeight="134.0" prefWidth="350.0" style="-fx-background-color: transparent;" styleClass="transparent-eleent" stylesheets="@../Style/panes.css" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+         <content>
+            <GridPane fx:id="splitGrid" prefHeight="134.0" prefWidth="345.0" styleClass="transparent-eleent" stylesheets="@../Style/panes.css">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+            </GridPane>
+         </content></ScrollPane>
+      <Label layoutX="77.0" layoutY="7.0" prefHeight="50.0" prefWidth="257.0" stylesheets="@../Style/button.css" text="Add a new expense">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Label>
    </children>
+   <stylesheets>
+      <URL value="@../Style/panes.css" />
+      <URL value="@../Style/button.css" />
+   </stylesheets>
 </AnchorPane>
