--- a/src/main/resources/com/ogr/splithappens/view/addExpense.fxml
+++ b/src/main/resources/com/ogr/splithappens/view/addExpense.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -17,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="450.0" prefWidth="410.0" styleClass="background-color-1" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="450.0" prefWidth="410.0" styleClass="background-color-1" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="20.0" layoutY="63.0" prefHeight="115.0" prefWidth="365.0" styleClass="background-color-2" stylesheets="@../Style/panes.css" />
       <GridPane layoutX="32.0" layoutY="72.0" prefHeight="156.0" prefWidth="344.0" AnchorPane.leftAnchor="31.0" AnchorPane.rightAnchor="36.0" AnchorPane.topAnchor="71.0">
@@ -36,16 +34,7 @@
             <TextField fx:id="titleField" prefHeight="25.0" prefWidth="179.0" GridPane.columnIndex="1" />
             <TextField fx:id="valueField" prefHeight="26.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="payerField" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <CheckBox fx:id="detailedCheck" mnemonicParsing="false" stylesheets="@../Style/button.css" text="Detailed split" GridPane.rowIndex="4">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <styleClass>
-                  <String fx:value="label" />
-                  <String fx:value="checkbox" />
-               </styleClass>
-            </CheckBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="zł" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="zł" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
@@ -65,6 +54,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
+            <ChoiceBox fx:id="splitChoice" prefWidth="150.0" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Button fx:id="addButton" layoutX="341.0" layoutY="394.0" mnemonicParsing="false" text="ADD" />
@@ -78,6 +68,7 @@
             <GridPane fx:id="splitGrid" prefHeight="134.0" prefWidth="345.0" styleClass="transparent-eleent" stylesheets="@../Style/panes.css">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
             </GridPane>
          </content></ScrollPane>
