--- a/src/main/resources/com/ogr/splithappens/ConfirmDeletionPopup.fxml
+++ b/src/main/resources/com/ogr/splithappens/ConfirmDeletionPopup.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="200.0" prefWidth="300.0" styleClass="background-color-1" stylesheets="@Style/panes.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Text fx:id="TextField" strokeType="OUTSIDE" strokeWidth="0.0" text="Are you sure you want to delete this person?" />
-            <Button mnemonicParsing="false" onAction="#onClickDelete" text="Delete" />
+            <Label stylesheets="@Style/interactables.css" text="Are you sure you want to delete this person?" />
+            <Button mnemonicParsing="false" onAction="#onClickDelete" stylesheets="@Style/interactables.css" text="Delete">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin></Button>
          </children>
       </VBox>
    </children>
