--- a/src/main/resources/com/ogr/splithappens/InvalidNamePopup.fxml
+++ b/src/main/resources/com/ogr/splithappens/InvalidNamePopup.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+
 <!--/fx:controller="com.ogr.splithappens.view.InvalidNamePopupView"-->
-<AnchorPane prefHeight="200" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+
+<AnchorPane prefHeight="200" prefWidth="300.0" styleClass="background-color-1" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Label text="Invalid name, try again" layoutX="80" layoutY="20" prefWidth="150" prefHeight="40" fx:id="textLabel"/>
-    <Button layoutX="100.0" layoutY="150.0" mnemonicParsing="false" text="Ok" fx:id="OkButton" onAction="#OnButton" />
-    <Button layoutX="140.0" layoutY="150.0" mnemonicParsing="false" text="Exit" fx:id="ExitButton" onAction="#OnButton"  />
+    <Label fx:id="textLabel" layoutX="83.0" layoutY="40.0" prefHeight="47.0" prefWidth="202.0" text="Invalid name, try again" />
+    <Button fx:id="OkButton" layoutX="94.0" layoutY="152.0" mnemonicParsing="false" onAction="#OnButton" text="Ok" />
+    <Button fx:id="ExitButton" layoutX="170.0" layoutY="152.0" mnemonicParsing="false" onAction="#OnButton" text="Exit" />
   </children>
+   <stylesheets>
+      <URL value="@Style/panes.css" />
+      <URL value="@Style/interactables.css" />
+   </stylesheets>
 </AnchorPane>
