--- a/src/main/resources/com/ogr/splithappens/SettleUp.fxml
+++ b/src/main/resources/com/ogr/splithappens/SettleUp.fxml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<!--/fx:controller="com.ogr.splithappens.view.InvalidNamePopupView"-->
-<?import com.sun.javafx.scene.control.IntegerField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<AnchorPane prefHeight="200" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"  >
+<?import javafx.scene.layout.VBox?>
+
+<!--/fx:controller="com.ogr.splithappens.view.InvalidNamePopupView"-->
+
+<AnchorPane prefHeight="200" prefWidth="300.0" styleClass="background-color-1" stylesheets="@Style/panes.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <VBox alignment="CENTER">
-      <Label text="Confirm the transaction?"  prefWidth="170" prefHeight="20" fx:id="textLabel" alignment="TOP_CENTER"/>
-      <Label text="Confirm the transaction?" prefWidth="170" prefHeight="20" fx:id="detailLabel" alignment="TOP_CENTER"/>
+    <VBox alignment="CENTER" layoutX="44.0" layoutY="14.0" prefHeight="102.0" prefWidth="212.0" styleClass="background-color-2" stylesheets="@Style/panes.css">
+      <Label fx:id="textLabel" alignment="TOP_CENTER" prefHeight="20" prefWidth="170" stylesheets="@Style/interactables.css" text="Confirm the transaction?" />
+      <Label fx:id="detailLabel" alignment="TOP_CENTER" prefHeight="20" prefWidth="170" stylesheets="@Style/interactables.css" text="Confirm the transaction?">
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin></Label>
       <HBox alignment="TOP_CENTER">
-        <Label text= "Amount: "  prefWidth="70" prefHeight="20" fx:id="amountLabel"/>
-        <TextField fx:id="amountField"  prefWidth="60"/>
+        <Label fx:id="amountLabel" prefHeight="20" prefWidth="70" stylesheets="@Style/interactables.css" text="Amount: " />
+        <TextField fx:id="amountField" prefHeight="25.0" prefWidth="90.0" stylesheets="@Style/interactables.css" />
+            <VBox.margin>
+               <Insets top="5.0" />
+            </VBox.margin>
       </HBox>
     </VBox>
-    <Button layoutX="80.0" layoutY="150.0" mnemonicParsing="false" text="Cancel" fx:id="CancelButton" onAction="#onCancelButton" />
-    <Button layoutX="160.0" layoutY="150.0" mnemonicParsing="false" text="Confirm" fx:id="ConfirmButton"  defaultButton="true" viewOrder="100" onAction="#onConfirmButton" />
+    <Button fx:id="CancelButton" layoutX="80.0" layoutY="150.0" mnemonicParsing="false" onAction="#onCancelButton" stylesheets="@Style/interactables.css" text="Cancel" />
+    <Button fx:id="ConfirmButton" defaultButton="true" layoutX="160.0" layoutY="150.0" mnemonicParsing="false" onAction="#onConfirmButton" stylesheets="@Style/interactables.css" text="Confirm" viewOrder="100" />
   </children>
 </AnchorPane>
