--- a/src/main/resources/com/ogr/splithappens/Style/interactables.css
+++ b/src/main/resources/com/ogr/splithappens/Style/interactables.css
@@ -45,7 +45,7 @@
 }
 
 
-
+/* ------------------- CHOICE BOX ------------------- */
 .choice-box{
     -fx-background-color: -col3;
     -fx-border-color: -col3;
@@ -71,9 +71,7 @@
     -fx-background-color: -col3;
 }
 
-.checkbox {
-    accent-color: #9b59b6;
-}
+
 
 /* ------------------- DATE PICKER ------------------- */
 .date-picker {
