--- a/src/main/resources/com/ogr/splithappens/view/addExpense.fxml
+++ b/src/main/resources/com/ogr/splithappens/view/addExpense.fxml
@@ -101,7 +101,7 @@
               </columnConstraints>
             </GridPane>
          </content></ScrollPane>
-      <Label layoutX="77.0" layoutY="7.0" prefHeight="50.0" prefWidth="257.0" stylesheets="@../Style/button.css" text="Add a new expense">
+      <Label layoutX="77.0" layoutY="7.0" prefHeight="50.0" prefWidth="257.0" stylesheets="@../Style/interactables.css" text="Add a new expense">
          <font>
             <Font size="27.0" />
          </font>
@@ -109,6 +109,6 @@
    </children>
    <stylesheets>
       <URL value="@../Style/panes.css" />
-      <URL value="@../Style/button.css" />
+      <URL value="@../Style/interactables.css" />
    </stylesheets>
 </AnchorPane>
