--- a/src/main/resources/com/ogr/splithappens/ExpenseDeletionPopup.fxml
+++ b/src/main/resources/com/ogr/splithappens/ExpenseDeletionPopup.fxml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="315.0" prefWidth="508.0" styleClass="background-color-1" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="There are some inactive people that participated in this Expense. Do you wish to bring them back and continue?" AnchorPane.topAnchor="20.0" />
-      <Button layoutY="168.0" mnemonicParsing="false" onAction="#onContinue" text="Continue" />
-      <Button layoutY="168.0" mnemonicParsing="false" onAction="#onCancel" text="Cancel" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="572.0" />
+      <VBox alignment="CENTER" layoutX="221.0" layoutY="81.0" prefHeight="315.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="There are some inactive people that participated in this Expense. Do you wish to bring them back and continue?" textAlignment="CENTER" wrappingWidth="344.6644287109375" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#onContinue" prefHeight="26.0" prefWidth="82.0" text="Continue" />
+                  <Button mnemonicParsing="false" onAction="#onCancel" prefHeight="26.0" prefWidth="83.0" text="Cancel" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
+   <stylesheets>
+      <URL value="@Style/colors.css" />
+      <URL value="@Style/interactables.css" />
+      <URL value="@Style/panes.css" />
+   </stylesheets>
 </AnchorPane>
